Fix flickering on Safari when resizing the window

--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -53,7 +53,7 @@ html {
   line-height: 1.5;
   font-weight: 400;
 }
-@media (min-width: 38rem) {
+@media (min-width: 650px) {
   html {
     font-size: 20px;
   }
